Updating the designs to suit Scotts Mocks

--- a/scss/_banner.scss
+++ b/scss/_banner.scss
@@ -33,8 +33,8 @@
             font-weight: 300;
         }
     }
-    &.purple_banner{
-        background: url(../img/banner/banner-bg-purple.jpg) no-repeat scroll center center;
+    &.nedorange_banner{
+        background: url(../img/banner/banner-bg-nedorange.jpg) no-repeat scroll center center;
     }
 }
 /* End Banner area css
