--- a/scss/_clients.scss
+++ b/scss/_clients.scss
@@ -5,7 +5,7 @@
     clear: both;
     background: #f1f1f1;
     padding: 100px 0px;
-    &.purple_clients{
+    &.nedorange_clients{
         .item{
             p{
                 background: #ede8ef;
