--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -13,7 +13,7 @@
             }
         }
     }
-    &.purple_subs{
+    &.nedorange_subs{
         .subscrib_form{
             input{
                 &:focus{
@@ -108,7 +108,7 @@
         left: 0px;
         top: 0px;
     }
-    &.purple_map{
+    &.nedorange_map{
         .contact_info{
             .contact_form_left{
                 .form-group{
