--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -38,7 +38,7 @@
             }
         }
     }
-    &.purple_footer{
+    &.nedorange_footer{
         .pull-left{
             h4{
                 a{
