--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -6,6 +6,7 @@
     left: 0px;
     top: 0px;
     z-index: 99;
+    background-color: #2167A1;
     .navbar-default{
         border: none;
         border-radius: 0px;
