--- a/scss/_blog.scss
+++ b/scss/_blog.scss
@@ -3,7 +3,7 @@
 .latest_blog_area{
     padding: 100px 0px;
     background: #f1f1f1;
-    &.purple_blog{
+    &.nedorange_blog{
         .latest_blog_item{
             .l_blog_img{
                 .l_blog_hover{
@@ -224,7 +224,7 @@
             }
         }
     }
-    &.purple_blog{
+    &.nedorange_blog{
         .blog_list_content{
             h3{
                 color: $dip;
@@ -288,7 +288,7 @@
             }
         }
     }
-    &.purple_pagination{
+    &.nedorange_pagination{
         .pagination{
             li{
                 a{
@@ -367,7 +367,7 @@
             
         }
     }
-    &.purple_search{
+    &.nedorange_search{
         .input-group{
             input{
                 color: $gray;
@@ -412,7 +412,7 @@
             }
         }
     }
-    &.purple_category{
+    &.nedorange_category{
         ul{
             li{
                 a{
@@ -472,7 +472,7 @@
             }
         }
     }
-    &.purple_recent{
+    &.nedorange_recent{
         .recent_widget_inner{
             .media{
                 .media-body{
@@ -519,7 +519,7 @@
             }
         }
     }
-    &.purple_tags{
+    &.nedorange_tags{
         ul{
             li{
                 a{
@@ -692,7 +692,7 @@
     }
 }
 
-.purple_blog{
+.nedorange_blog{
     .blog_details_inner{
         .blog_details_first{
             img{
@@ -904,7 +904,7 @@
             float: right;
         }
     }
-    &.purple_comment{
+    &.nedorange_comment{
         .media{
             .media-body{
                 h4{
@@ -989,7 +989,7 @@
             margin-bottom: 0px;
         }
     }
-    &.purple_form{
+    &.nedorange_form{
         .form-group{
             input{
                 &:focus{
