--- a/scss/_price.scss
+++ b/scss/_price.scss
@@ -17,7 +17,7 @@
         height: 100%;
         opacity: .80;
     }
-    &.purple_price{
+    &.nedorange_price{
         .pricing_item{
             h3{
                 font-size: 20px;
@@ -151,7 +151,7 @@
             }
         }
     }
-    &.purple_dd{
+    &.nedorange_dd{
         .download_inner{
             h3{
                 color: $mainColor;
