--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,15 +1,16 @@
 /*font Variables*/
-$mon: 'Montserrat', sans-serif;
-$lato: 'Lato', sans-serif;
+$mon: 'Avenir-Light', sans-serif;
+$lato: 'Avenir-Light', sans-serif;
+
 
 
 /*Color Variables*/
 
-$baseColor: #FAA819;
-$mainColor: #FAA819;
-$par: #FAA819;
-$dip: #222222;
-$gray: #696969;
+$baseColor: #FFAA00;
+$mainColor: #FFAA00;
+$par: #2B2B2B;
+$dip: #2B2B2B;
+$gray: #2B2B2B;
 
 
 
@@ -32,4 +33,4 @@ $gray: #696969;
 }
 
 // Font family link
-@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700,900|Montserrat:300,400,400i,500,600,700,800,900');
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700,900|Avenir-Light:300,400,400i,500,600,700,800,900');
